--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -148,7 +148,7 @@
       {{ App.Session.get('csrf')|csrf }}
       <div class='d-flex'>
         <div>
-          <input id='importFileInput' class='d-none' required name='file' type='file' accept='.eln,vnd.eln+zip,.csv,text/csv' />
+          <input id='importFileInput' hidden required name='file' type='file' accept='.eln,vnd.eln+zip,.csv,text/csv' />
           <div class='mb-4 d-flex flex-row'>
             <button type='button' class='btn btn-primary' data-action='show-file-input' >{{ 'Import from file'|trans }}</button>
           </div>
