just added storage

--- a/src/templates/storage-list.html
+++ b/src/templates/storage-list.html
@@ -1,4 +1,5 @@
 {# var: storage_editable bool #}
+{# var: storageUnitsArr array #}
 <a href='#' data-action='expand-all-storage'>{{ 'Expand all'|trans }}</a>
 <div id='storageDiv'>
   {% macro render_items(items, groupedItems, storage_editable) %}
