--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -76,6 +76,7 @@
                 <a class='dropdown-item' href='compounds.php'>{{ 'Compounds'|trans }}</a>
                 <a class='dropdown-item' href='chem-editor.php'>{{ 'Chemical Structure Editor'|trans }}</a>
                 <a class='dropdown-item' href='syc.php'>{{ 'DNA Cloning'|trans }}</a>
+                <a class='dropdown-item' href='storage.php'>{{ 'Storage browser'|trans }}</a>
             </li>
 
 
