bug/minor: tables: image scaling in tables (#5321)
Avoid issues whith scaling tables and images in them.

fix #5039

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -422,6 +422,16 @@ button:disabled {
     }
   }
 
+  td {
+    width: fit-content;
+
+    img {
+      object-fit: contain;
+      max-width: 100%;
+      height: auto;
+    }
+  }
+
   th {
     border-top: 0;
     white-space: nowrap;
