--- a/src/templates/import-pubchem-modal.html
+++ b/src/templates/import-pubchem-modal.html
@@ -15,16 +15,22 @@
             <div class='input-group-prepend'>
               <span class='input-group-text' id='pubchem-cid-descriptor'>CID</span>
             </div>
-            <input type='text' class='form-control' id='pubchem-cid' aria-describedby='pubchem-cid-descriptor'>
+            <input type='number' class='form-control' required min='1' id='pubchem-cid' aria-describedby='pubchem-cid-descriptor'>
             <div class='input-group-append'>
-              <button type='button' class='btn btn-primary' data-dismiss='modal' data-action='import-cid'>{{ 'Import'|trans }}</button>
+              <button type='button' class='btn btn-primary' data-action='search-cid'>{{ 'Search'|trans }}</button>
             </div>
+          </div>
+          <div id='pubChemSearchResultDiv' class='mt-3' hidden>
+            <button class='btn btn-ghost' type='button'><a target='_blank' id='viewOnPubChemLink' class='external-link' rel='noopener' href='https://pubchem.ncbi.nlm.nih.gov/compound/'>{{ 'View on PubChem'|trans }}</a></button>
+            <div id='pubChemSearchResultTableDiv' class='mt-3'></div>
+
           </div>
         </div>
       </div>
 
       <div class='modal-footer'>
         <button type='button' class='btn btn-ghost' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
+        <button type='button' class='btn btn-primary' data-dismiss='modal' data-action='import-cid' disabled>{{ 'Import'|trans }}</button>
       </div>
     </div>
   </div>
