--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -723,7 +723,7 @@
   <hr>
   <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Resources tags'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
   <div hidden class='mt-2'>
-    {% for tag in tagsArr %}
+    {% for tag in tagsArr|sort((a, b) => a.tag|lower <=> b.tag|lower) %}
       <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
         <label for='batch-itemsTags-{{ tag.id }}' class='col-form-label clickable'>{{ tag.tag }}</label>
         <label class='switch ucp-align'>
@@ -765,8 +765,8 @@
   <hr>
   <button type='button' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2' data-toggle-plus-icon='1' data-action='toggle-next' data-keep-icon='1' title='{{ 'Toggle display'|trans }}' aria-label='{{ 'Toggle display'|trans }}'><i class='fas fa-square-plus fa-fw link-like mr-2'></i>{{ 'Experiments tags'|trans }} (<span class='counterValue'>0</span> {{ 'selected'|trans }})</button>
   <div hidden class='mt-2'>
-    {% for tag in tagsArr %}
-      <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
+    {% for tag in tagsArr|sort((a, b) => a.tag|lower <=> b.tag|lower) %}
+    <div class='d-flex justify-content-between p-1 rounded hl-hover-gray'>
         <label for='batch-experimentsTags-{{ tag.id }}' class='col-form-label clickable'>{{ tag.tag }}</label>
         <label class='switch ucp-align'>
           <input type='checkbox' name='experiments_tags' value='{{ tag.id }}' autocomplete='off' data-action='update-counter-value' id='batch-experimentsTags-{{ tag.id }}'>
