fix anchor missing desc & ids to camelCase

--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -112,7 +112,7 @@
   <div class='d-flex mb-2'>
     <div id='selectBookableWarningDiv' hidden>{{ 'Select a resource below in order to book it.'|trans }}</div>
     <div class='ml-auto row'>
-      <a href='ucp.php?tab=1' class='btn p-2 hl-hover-gray lh-normal border-0 mr-2'>
+      <a href='ucp.php?tab=1#schedulerSettings' aria-label='{{ 'Settings'|trans }}' title='{{ 'Settings'|trans }}' class='btn p-2 hl-hover-gray lh-normal border-0 mr-2'>
         <i class='fas fa-cogs fa-fw'></i>
       </a>
       {% include 'scope-button.html' with {'reload': 'page', 'target': 'scope_items'} %}
