ui: user menu: use initals instead of a generic icon
Having initials in the top right menu facilitates the identification of
the current user and could prevent incorrect usage. Fix #5342

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1559,3 +1559,10 @@ input:checked + .slider::before {
     }
   }
 }
+
+/* top right button */
+.initials {
+  font-weight: bold;
+  color: $secondlevel;
+  font-size: 1.5rem;
+}
